[gd_scene load_steps=4 format=2]

[ext_resource path="res://Ressources/Ennemis/Enemy_2_Neon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/EnnemiTripleLaser.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 594.108

[node name="EnnemiTripleLaser" type="KinematicBody2D" groups=[
"ennemis",
]]
script = ExtResource( 2 )

[node name="EnnemiTripleLaserImage" type="Sprite" parent="."]
rotation = -1.57644
texture = ExtResource( 1 )

[node name="EnnemiTripleLaserCollision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 14.75, 0, 2, 15, 39.75, 15, -38.75, 45.25, -6.75, 15.75, -32.75, -0.25, -7.25, -15.75, -44.5, -47.25, 38.5, -16.5, 2.25, -15.25 )

[node name="EnnemiTripleLaserPosition1" type="Position2D" parent="."]
position = Vector2( 75.9203, 0 )

[node name="EnnemiTripleLaserPosition2" type="Position2D" parent="."]
position = Vector2( 54, -16 )

[node name="EnnemiTripleLaserPosition3" type="Position2D" parent="."]
position = Vector2( 54, 15 )

[node name="EnnemiTripleLaserDetection" type="Area2D" parent="."]

[node name="EnnemiTripleLaserCercle" type="CollisionShape2D" parent="EnnemiTripleLaserDetection"]
shape = SubResource( 1 )

[node name="EnnemiTripleLaserTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="EnnemiTripleLaserSon" type="AudioStreamPlayer" parent="."]
[connection signal="body_entered" from="EnnemiTripleLaserDetection" to="." method="_on_EnnemiTripleLaserDetection_body_entered"]
[connection signal="body_exited" from="EnnemiTripleLaserDetection" to="." method="_on_EnnemiTripleLaserDetection_body_exited"]
[connection signal="timeout" from="EnnemiTripleLaserTimer" to="." method="_on_EnnemiTripleLaserTimer_timeout"]
